--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -1,4 +1,4 @@
-@media screen (max-width: 767px) {
+@media (max-width: 767px) {
   .mobile-menu {
     position: fixed;
     top: 0;
@@ -7,9 +7,9 @@
     height: 100vw;
     background-color: bisque;
     overflow: auto;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 
     &__container {
       position: relative;
@@ -28,9 +28,17 @@
       height: 40px;
     }
     &.is-open {
-      opacity: 1;
-      visibility: visible;
-      pointer-events: auto;
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
     }
+  }
+}
+@media (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+  .mobile-menu__close-btn {
+    display: none;
   }
 }
