--- a/sass/layout/_footer-settings.scss
+++ b/sass/layout/_footer-settings.scss
@@ -9,5 +9,7 @@
   @media (max-width: 768px) {
     display: block;
     text-align: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
