--- a/sass/layout/_footer-social-links.scss
+++ b/sass/layout/_footer-social-links.scss
@@ -1,4 +1,10 @@
 .social-block {
+  @media (max-width: 767px) {
+    display: inline-block;
+    flex: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
 }
 
 .social-block__porpose {
@@ -9,12 +15,15 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  @media (max-width: 767px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 .social-list {
   display: flex;
   margin-top: 20px;
-  @media (max-width: 768px) {
-    text-align: center;
+  @media (max-width: 767px) {
   }
 }
 .social-list .social-list__item {
