--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -12,6 +12,9 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
   }
+  @media (max=width: 767px) {
+    flex-wrap: wrap;
+  }
 }
 
 .agent {
@@ -40,11 +43,11 @@
     margin-right: 30px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .team {
     padding: 60px 0;
   }
-  .team__cardlist {
+  .team__card {
     display: block;
   }
 }
