--- a/sass/layout/_footer-form.scss
+++ b/sass/layout/_footer-form.scss
@@ -8,6 +8,9 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #ffffff;
+    @media (max-width: 767px) {
+      margin-bottom: 20px;
+    }
   }
 }
 
@@ -66,6 +69,13 @@
   letter-spacing: 0.06em;
   color: #ffffff;
   padding-left: 28px;
+  @media (max-width: 767px) {
+    border: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+  }
 }
 .footer-form__icon {
   fill: #ffffff;
