--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -12,7 +12,7 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
   }
-  @media (max=width: 767px) {
+  @media (max-width: 767px) {
     flex-wrap: wrap;
   }
 }
@@ -37,17 +37,25 @@
   margin-top: 10px;
   color: var(--title-text-color);
 }
-.team__card {
-  background-color: #ffffff;
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
-}
+// .team__card {
+//   background-color: #ffffff;
+//   // &:not(:last-child) {
+//   //   margin-right: 30px;
+//   }
+
 @media (max-width: 767px) {
   .team {
     padding: 60px 0;
   }
   .team__card {
     display: block;
+
+    background-color: #fff;
   }
+  .team__card:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  // .picture {
+  //   width: 100%;
+  // }
 }
