--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -52,10 +52,20 @@
 
     background-color: #fff;
   }
+  img {
+    height: auto;
+  }
   .team__card:not(:last-child) {
     margin-bottom: 30px;
   }
-  // .picture {
-  //   width: 100%;
-  // }
+}
+@media (min-width: 768px) {
+  .team__cardlist {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    li {
+      width: calc(50% - 15px);
+    }
+  }
 }
