--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,13 @@ a {
   }
 }
 
+@media (min-width: 768px) {
+  .container {
+    min-width: 768px;
+    width: auto;
+  }
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -503,6 +510,12 @@ ul {
   }
 }
 
+@media (min-width: 768px) {
+  .contacts {
+    display: block;
+  }
+}
+
 @media (max-width: 767px) {
   .mobile-menu {
     position: fixed;
@@ -722,10 +735,25 @@ ul {
     padding: 60px 0;
   }
   .qualitys__list li {
-    width: 450px;
+    width: 100%;
   }
   .qualitys__text {
     width: auto;
+  }
+}
+
+@media (min-width: 768px) {
+  .qualitys__list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .qualitys__list li {
+    margin-right: 0;
+    width: calc(50% - 15px);
+  }
+  .qualitys__list li:not(:last-child) {
+    margin-right: 0;
   }
 }
 
@@ -818,8 +846,22 @@ ul {
     display: block;
     background-color: #fff;
   }
+  img {
+    height: auto;
+  }
   .team__card:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+
+@media (min-width: 768px) {
+  .team__cardlist {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .team__cardlist li {
+    width: calc(50% - 15px);
   }
 }
 
@@ -878,7 +920,7 @@ ul {
   height: 44px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .customers__title {
     flex-wrap: wrap;
   }
@@ -896,6 +938,24 @@ ul {
   }
 }
 
+@media (min-width: 768px) {
+  .center {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .customers__title {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .customers__title li {
+    width: calc(30% - 15px);
+  }
+  .customers__title a {
+    width: 100%;
+  }
+}
+
 .footer {
   padding: 60px 0;
   background-color: var(--background-color-primary);
@@ -907,12 +967,20 @@ ul {
   align-items: baseline;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .footer__blocks {
     display: block;
     text-align: center;
     padding-top: 60px;
     padding-bottom: 60px;
+  }
+}
+
+@media (min-width: 768px) {
+  .footer__blocks {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
 
@@ -1058,6 +1126,14 @@ ul {
   }
 }
 
+@media (min-width: 768px) {
+  .footer-form__btn {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+
 .footer-form__input {
   padding: 15px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1088,7 +1164,7 @@ ul {
 
 @media (max-width: 768px) {
   .footer-form__input {
-    max-width: 450px;
+    width: 100%;
     height: 50px;
   }
 }
@@ -1120,6 +1196,13 @@ ul {
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .footer-form__button {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
