--- a/sass/layout/_about-us.scss
+++ b/sass/layout/_about-us.scss
@@ -62,9 +62,23 @@
     padding: 60px 0;
   }
   .qualitys__list li {
-    width: 450px;
+    width: 100%;
   }
   .qualitys__text {
     width: auto;
+  }
+}
+@media (min-width: 768px) {
+  .qualitys__list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    li {
+      margin-right: 0;
+      width: calc(50% - 15px);
+    }
+  }
+  .qualitys__list li:not(:last-child) {
+    margin-right: 0;
   }
 }
