--- a/sass/layout/_footer-form.scss
+++ b/sass/layout/_footer-form.scss
@@ -20,6 +20,11 @@
   @media (max-width: 768px) {
     display: block;
   }
+  @media (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
 .footer-form__input {
   padding: 15px;
@@ -46,7 +51,7 @@
     color: rgba(255, 255, 255, 0.6);
   }
   @media (max-width: 768px) {
-    max-width: 450px;
+    width: 100%;
     height: 50px;
   }
 }
@@ -75,6 +80,12 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
+  }
+  @media (min-width: 768px) {
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
   }
 }
 .footer-form__icon {
