--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -11,7 +11,8 @@
   margin-right: auto;
   height: 600px;
   @media (max-width: 768px) {
-    background-image:linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/icon-img/hero-1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(/images/icon-img/hero-1x.jpg);
     background-repeat: no-repeat;
     max-width: 480px;
     max-height: 400px;
