--- a/sass/layout/_regular-customers.scss
+++ b/sass/layout/_regular-customers.scss
@@ -48,7 +48,7 @@
   width: 94px;
   height: 44px;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .customers__title {
     flex-wrap: wrap;
     li {
@@ -63,5 +63,22 @@
   }
   .center {
     margin: 30px 0 30px 0;
+  }
+}
+@media (min-width: 768px) {
+  .center {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .customers__title {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    li {
+      width: calc(30% - 15px);
+    }
+    a {
+      width: 100%;
+    }
   }
 }
