--- a/sass/layout/_header-contacts.scss
+++ b/sass/layout/_header-contacts.scss
@@ -56,4 +56,10 @@
   .contacts {
     display: block;
   }
+  .contacts__mail {
+    margin-bottom: 5px;
+  }
+  .contacts__phone {
+    margin-top: 5px;
+  }
 }
