--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,12 @@ body {
   fill: #ffffff;
 }
 
+@media (min-width: 768px) {
+  .card-social-links__item {
+    width: auto;
+  }
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -514,6 +520,12 @@ ul {
   .contacts {
     display: block;
   }
+  .contacts__mail {
+    margin-bottom: 5px;
+  }
+  .contacts__phone {
+    margin-top: 5px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -522,8 +534,8 @@ ul {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vw;
-    background-color: bisque;
+    height: 100vh;
+    background-color: #fff;
     overflow: auto;
     opacity: 1;
     visibility: visible;
@@ -533,6 +545,10 @@ ul {
     position: relative;
     padding-top: 48px;
     padding-bottom: 48px;
+    padding-left: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
   }
   .mobile-menu__close-btn {
     position: absolute;
@@ -549,6 +565,47 @@ ul {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+  }
+  .mobile-menu__nav-list {
+    margin-top: -32px;
+  }
+  .mobile-menu__item {
+    margin-top: 32px;
+  }
+  .mobile-menu__link {
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #212121;
+  }
+  .mobile-menu__contacts-mail {
+    color: #757575;
+    font-size: 24px;
+    margin-top: 32px;
+  }
+  .mobile-menu__contacts-tel {
+    color: #2196f3;
+    font-size: 34px;
+    margin-top: 100px;
+  }
+  .mobile-menu-social-list {
+    display: flex;
+    align-items: stretch;
+    margin-top: 64px;
+  }
+  .mobile-menu-social-list__link {
+    display: block;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    /* identical to box height, or 122% */
+    letter-spacing: 0.02em;
+    color: #2196f3;
+  }
+  .bord {
+    color: #212121;
   }
 }
 
@@ -574,17 +631,6 @@ ul {
   height: 600px;
 }
 
-@media (max-width: 768px) {
-  .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/icon-img/hero-1x.jpg);
-    background-repeat: no-repeat;
-    max-width: 480px;
-    max-height: 400px;
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
-}
-
 .hero__name {
   width: 696px;
   margin: 0 auto 0 auto;
@@ -595,14 +641,6 @@ ul {
   color: var(--second-primary-text-color);
   letter-spacing: 0.06em;
   text-transform: uppercase;
-}
-
-@media (max-width: 768px) {
-  .hero__name {
-    font-size: 26px;
-    max-width: 360px;
-    width: auto;
-  }
 }
 
 .hero__button {
@@ -620,49 +658,38 @@ ul {
   border: none;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/icon-img/hero1xmob.jpg.jpg);
+    background-repeat: no-repeat;
+    max-width: 480px;
+    max-height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+  .hero__name {
+    font-size: 26px;
+    max-width: 360px;
+    width: auto;
+  }
   .hero__button {
     border: none;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .hero {
-    background-color: var(--background-color-primary);
-    display: flex;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    text-align: center;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/icon-img/Img-hero.jpg);
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-    height: 600px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/icon-img/hero1xtablet.jpg.jpg);
+    background-repeat: no-repeat;
+    width: 768px;
+    height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
   }
   .hero__name {
-    width: 696px;
-    margin: 0 auto 0 auto;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    /* or 136% */
-    color: var(--second-primary-text-color);
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-  }
-  .hero__button {
-    width: 200px;
-    height: 50px;
-    margin-top: 30px;
-    background-color: var(--accennt-color);
-    color: var(--second-primary-text-color);
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    cursor: pointer;
-    border-radius: 4px;
-    border: none;
+    font-size: 26px;
+    max-width: 360px;
+    width: auto;
   }
 }
 
@@ -743,14 +770,20 @@ ul {
 }
 
 @media (min-width: 768px) {
+  .qualitys {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   .qualitys__list {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-bottom: -30px;
   }
   .qualitys__list li {
     margin-right: 0;
     width: calc(50% - 15px);
+    margin-bottom: 30px;
   }
   .qualitys__list li:not(:last-child) {
     margin-right: 0;
@@ -855,13 +888,23 @@ ul {
 }
 
 @media (min-width: 768px) {
+  .team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   .team__cardlist {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-bottom: -30px;
   }
   .team__cardlist li {
     width: calc(50% - 15px);
+    margin-bottom: 30px;
+    background-color: #fff;
+  }
+  .team__cardlist li img {
+    height: auto;
   }
 }
 
@@ -923,6 +966,7 @@ ul {
 @media (max-width: 767px) {
   .customers__title {
     flex-wrap: wrap;
+    margin-bottom: -30px;
   }
   .customers__title li {
     width: calc(50% - 15px);
@@ -933,26 +977,30 @@ ul {
   .customers {
     padding: 60px 0;
   }
-  .center {
-    margin: 30px 0 30px 0;
+  .customers__item {
+    margin-bottom: 30px;
   }
 }
 
 @media (min-width: 768px) {
-  .center {
-    margin-top: 0;
-    margin-bottom: 0;
+  .customers {
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
   .customers__title {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-bottom: -30px;
   }
   .customers__title li {
-    width: calc(30% - 15px);
+    width: calc(33% - 15px);
   }
   .customers__title a {
     width: 100%;
+  }
+  .customers__item {
+    margin-bottom: 30px;
   }
 }
 
@@ -968,15 +1016,19 @@ ul {
 }
 
 @media (max-width: 767px) {
+  .footer {
+    padding: 60px 0;
+  }
   .footer__blocks {
     display: block;
     text-align: center;
-    padding-top: 60px;
-    padding-bottom: 60px;
   }
 }
 
 @media (min-width: 768px) {
+  .footer {
+    padding: 60px 0;
+  }
   .footer__blocks {
     display: flex;
     flex-wrap: wrap;
@@ -994,6 +1046,13 @@ ul {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--second-primary-text-color);
+}
+
+@media (min-width: 768px) {
+  .logo-footer {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .address {
@@ -1039,15 +1098,6 @@ ul {
   letter-spacing: 0.03em;
 }
 
-@media (max-width: 767px) {
-  .social-block {
-    display: inline-block;
-    flex: auto;
-    margin-top: 60px;
-    margin-bottom: 60px;
-  }
-}
-
 .social-block__porpose {
   color: #fff;
   font-weight: bold;
@@ -1056,13 +1106,6 @@ ul {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-}
-
-@media (max-width: 767px) {
-  .social-block__porpose {
-    margin-left: auto;
-    margin-right: auto;
-  }
 }
 
 .social-list {
@@ -1095,6 +1138,25 @@ ul {
   fill: #ffffff;
 }
 
+@media (max-width: 767px) {
+  .social-block {
+    display: inline-block;
+    flex: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+  .social-block__porpose {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (min-width: 768px) {
+  .social-block__porpose {
+    justify-content: center;
+  }
+}
+
 .footer-form {
   display: flex;
   flex-direction: column;
@@ -1109,29 +1171,9 @@ ul {
   color: #ffffff;
 }
 
-@media (max-width: 767px) {
-  .footer-form__name {
-    margin-bottom: 20px;
-  }
-}
-
 .footer-form__btn {
   display: flex;
   margin-top: 20px;
-}
-
-@media (max-width: 768px) {
-  .footer-form__btn {
-    display: block;
-  }
-}
-
-@media (min-width: 768px) {
-  .footer-form__btn {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
 }
 
 .footer-form__input {
@@ -1162,13 +1204,6 @@ ul {
   color: rgba(255, 255, 255, 0.6);
 }
 
-@media (max-width: 768px) {
-  .footer-form__input {
-    width: 100%;
-    height: 50px;
-  }
-}
-
 /* КНОПКА */
 .footer-form__button {
   margin-left: 12px;
@@ -1189,7 +1224,27 @@ ul {
   padding-left: 28px;
 }
 
+.footer-form__icon {
+  fill: #ffffff;
+  width: 24px;
+  height: 24px;
+  background-image: url(../images/icon-img/icon-send.svg);
+  background-repeat: no-repeat;
+  background-position-x: right;
+  margin-left: 6px;
+}
+
 @media (max-width: 767px) {
+  .footer-form {
+    margin-bottom: 20px;
+  }
+  .footer-form__btn {
+    display: block;
+  }
+  .footer-form__input {
+    width: 100%;
+    height: 50px;
+  }
   .footer-form__button {
     border: none;
     display: block;
@@ -1200,20 +1255,24 @@ ul {
 }
 
 @media (min-width: 768px) {
-  .footer-form__button {
+  .footer-form__name {
     margin-left: auto;
     margin-right: auto;
   }
-}
-
-.footer-form__icon {
-  fill: #ffffff;
-  width: 24px;
-  height: 24px;
-  background-image: url(../images/icon-img/icon-send.svg);
-  background-repeat: no-repeat;
-  background-position-x: right;
-  margin-left: 6px;
+  .footer-form__btn {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .footer-form__button {
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+  }
+  .footer-form__input {
+    height: 50px;
+  }
 }
 
 .section-conteiner {
