--- a/sass/layout/_footer-form.scss
+++ b/sass/layout/_footer-form.scss
@@ -8,23 +8,12 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #ffffff;
-    @media (max-width: 767px) {
-      margin-bottom: 20px;
-    }
   }
 }
 
 .footer-form__btn {
   display: flex;
   margin-top: 20px;
-  @media (max-width: 768px) {
-    display: block;
-  }
-  @media (min-width: 768px) {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
 }
 .footer-form__input {
   padding: 15px;
@@ -50,10 +39,6 @@
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
   }
-  @media (max-width: 768px) {
-    width: 100%;
-    height: 50px;
-  }
 }
 
 /* КНОПКА */
@@ -74,19 +59,6 @@
   letter-spacing: 0.06em;
   color: #ffffff;
   padding-left: 28px;
-  @media (max-width: 767px) {
-    border: none;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-  }
-  @media (min-width: 768px) {
-    border: none;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-  }
 }
 .footer-form__icon {
   fill: #ffffff;
@@ -96,4 +68,43 @@
   background-repeat: no-repeat;
   background-position-x: right;
   margin-left: 6px;
+}
+@media (max-width: 767px) {
+  .footer-form {
+    margin-bottom: 20px;
+  }
+  .footer-form__btn {
+    display: block;
+  }
+  .footer-form__input {
+    width: 100%;
+    height: 50px;
+  }
+  .footer-form__button {
+    border: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 768px) {
+  .footer-form__name {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footer-form__btn {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .footer-form__button {
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+  }
+  .footer-form__input {
+    height: 50px;
+  }
 }
