--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,15 +10,6 @@
   margin-left: auto;
   margin-right: auto;
   height: 600px;
-  @media (max-width: 768px) {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(/images/icon-img/hero-1x.jpg);
-    background-repeat: no-repeat;
-    max-width: 480px;
-    max-height: 400px;
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
 }
 
 .hero__name {
@@ -31,11 +22,6 @@
   color: var(--second-primary-text-color);
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  @media (max-width: 768px) {
-    font-size: 26px;
-    max-width: 360px;
-    width: auto;
-  }
 }
 
 .hero__button {
@@ -51,47 +37,79 @@
   cursor: pointer;
   border-radius: 4px;
   border: none;
-  @media (max-width: 768px) {
-    border: none;
-  }
 }
-@media (min-width: 1200px) {
+@media (max-width: 767px) {
   .hero {
-    background-color: var(--background-color-primary);
-    display: flex;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    text-align: center;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/icon-img/Img-hero.jpg);
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-    height: 600px;
+      url(/images/icon-img/hero1xmob.jpg.jpg);
+    background-repeat: no-repeat;
+    max-width: 480px;
+    max-height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
   }
   .hero__name {
-    width: 696px;
-    margin: 0 auto 0 auto;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    /* or 136% */
-    color: var(--second-primary-text-color);
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+    font-size: 26px;
+    max-width: 360px;
+    width: auto;
   }
   .hero__button {
-    width: 200px;
-    height: 50px;
-    margin-top: 30px;
-    background-color: var(--accennt-color);
-    color: var(--second-primary-text-color);
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    cursor: pointer;
-    border-radius: 4px;
     border: none;
   }
 }
+@media (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(/images/icon-img/hero1xtablet.jpg.jpg);
+    background-repeat: no-repeat;
+    width: 768px;
+    height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+  .hero__name {
+    font-size: 26px;
+    max-width: 360px;
+    width: auto;
+  }
+}
+// @media (min-width: 1200px) {
+//   .hero {
+//     background-color: var(--background-color-primary);
+//     display: flex;
+//     padding-top: 200px;
+//     padding-bottom: 200px;
+//     text-align: center;
+//     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+//       url(../images/icon-img/Img-hero.jpg);
+//     max-width: 1600px;
+//     margin-left: auto;
+//     margin-right: auto;
+//     height: 600px;
+//   }
+//   .hero__name {
+//     width: 696px;
+//     margin: 0 auto 0 auto;
+//     font-weight: 900;
+//     font-size: 44px;
+//     line-height: 1.36;
+//     /* or 136% */
+//     color: var(--second-primary-text-color);
+//     letter-spacing: 0.06em;
+//     text-transform: uppercase;
+//   }
+//   .hero__button {
+//     width: 200px;
+//     height: 50px;
+//     margin-top: 30px;
+//     background-color: var(--accennt-color);
+//     color: var(--second-primary-text-color);
+//     font-weight: bold;
+//     font-size: 16px;
+//     line-height: 1.87;
+//     letter-spacing: 0.06em;
+//     cursor: pointer;
+//     border-radius: 4px;
+//     border: none;
+//   }
+// }
