--- a/sass/layout/_logo-footer.scss
+++ b/sass/layout/_logo-footer.scss
@@ -9,3 +9,11 @@
   letter-spacing: 0.03em;
   color: var(--second-primary-text-color);
 }
+@media (min-width: 768px) {
+  .footer__contacts {
+  }
+  .logo-footer {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
