--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -4,8 +4,8 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vw;
-    background-color: bisque;
+    height: 100vh;
+    background-color: #fff;
     overflow: auto;
     opacity: 1;
     visibility: visible;
@@ -15,6 +15,11 @@
       position: relative;
       padding-top: 48px;
       padding-bottom: 48px;
+      padding-left: 25px;
+
+      display: flex;
+      flex-direction: column;
+      align-items: baseline;
     }
     &__close-btn {
       position: absolute;
@@ -32,6 +37,51 @@
       visibility: hidden;
       pointer-events: none;
     }
+  }
+  .mobile-menu__nav-list {
+    margin-top: -32px;
+  }
+  .mobile-menu__item {
+    margin-top: 32px;
+  }
+  .mobile-menu__link {
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+
+    color: #212121;
+  }
+  .mobile-menu__contacts-mail {
+    color: #757575;
+    font-size: 24px;
+    margin-top: 32px;
+  }
+  .mobile-menu__contacts-tel {
+    color: #2196f3;
+    font-size: 34px;
+    margin-top: 100px;
+  }
+
+  .mobile-menu-social-list {
+    display: flex;
+    align-items: stretch;
+    margin-top: 64px;
+  }
+  .mobile-menu-social-list__link {
+    display: block;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    /* identical to box height, or 122% */
+
+    letter-spacing: 0.02em;
+
+    color: #2196f3;
+  }
+  .bord {
+    color: #212121;
   }
 }
 @media (min-width: 768px) {
