--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,12 @@ a {
   box-sizing: border-box;
 }
 
+@media (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
 @media (max-width: 480px) {
   .container {
     max-width: 100%;
