--- a/sass/base/_base-styles.scss
+++ b/sass/base/_base-styles.scss
@@ -3,12 +3,18 @@
   padding: 0 15px;
   margin: 0 auto;
   box-sizing: border-box;
+  @media (min-width: 480px) {
+    width: 480px;
+  }
   @media (max-width: 480px) {
     max-width: 100%;
   }
   @media (min-width: 768px) {
     min-width: 768px;
     width: auto;
+  }
+  @media (min-width: 1140px) {
+    width: 1140px;
   }
 }
 .header-container {
