загрузил сжатые фото, поверстал моб и мод окна, портф

--- a/sass/portfolio/_portf-section-works.scss
+++ b/sass/portfolio/_portf-section-works.scss
@@ -75,3 +75,10 @@
   box-sizing: border-box;
   padding: 20px 24px;
 }
+@media (max-width: 767px) {
+  .portfolio img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+}
