--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,12 @@ a {
   }
 }
 
+@media (min-width: 1140px) {
+  .container {
+    width: 1140px;
+  }
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -182,6 +188,18 @@ body {
 .modal__button:hover {
   fill: var(--accennt-color);
   border-color: var(--accennt-color);
+}
+
+@media (max-width: 767px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    max-width: 500px;
+    overflow-y: scroll;
+  }
 }
 
 .modal-form {
@@ -339,6 +357,16 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+@media (max-width: 767px) {
+  .modal-form__policy {
+    font-size: 12px;
+  }
+  .modal-form__input {
+    width: 100%;
+    height: 40px;
+  }
+}
+
 .header {
   font-weight: 500;
   font-size: 14px;
@@ -450,6 +478,10 @@ ul {
     border: none;
     background-color: transparent;
   }
+  .menu__button:hover,
+  .menu__button:focus {
+    fill: #2196f3;
+  }
 }
 
 @media (min-width: 768px) {
@@ -543,6 +575,7 @@ ul {
     height: 100vh;
     background-color: #fff;
     overflow: auto;
+    z-index: 999;
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
@@ -596,7 +629,6 @@ ul {
   }
   .mobile-menu-social-list {
     display: flex;
-    align-items: stretch;
     margin-top: 64px;
   }
   .mobile-menu-social-list__link {
@@ -612,6 +644,10 @@ ul {
   }
   .bord {
     color: #212121;
+  }
+  .mobile-menu__close-btn:hover,
+  .mobile-menu__close-btn:focus {
+    color: #2196f3;
   }
 }
 
@@ -666,7 +702,7 @@ ul {
 
 @media (max-width: 767px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/icon-img/hero1xmob.jpg.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/icon-img/hero1xmob.jpg);
     background-repeat: no-repeat;
     max-width: 480px;
     max-height: 400px;
@@ -1054,13 +1090,6 @@ ul {
   color: var(--second-primary-text-color);
 }
 
-@media (min-width: 768px) {
-  .logo-footer {
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
 .address {
   margin-top: 20px;
 }
@@ -1154,12 +1183,6 @@ ul {
   .social-block__porpose {
     margin-left: auto;
     margin-right: auto;
-  }
-}
-
-@media (min-width: 768px) {
-  .social-block__porpose {
-    justify-content: center;
   }
 }
 
@@ -1289,6 +1312,19 @@ ul {
   padding-bottom: 94px;
 }
 
+@media (min-width: 480px) {
+  .section-conteiner {
+    width: 480px;
+  }
+}
+
+@media (max-width: 767px) {
+  .section-conteiner {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
 .button-list {
   display: flex;
   flex-direction: row;
@@ -1330,6 +1366,21 @@ ul {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   background-color: var(--accennt-color);
   color: var(--second-primary-text-color);
+}
+
+@media (max-width: 767px) {
+  .button-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
+    margin-top: -15px;
+    margin-bottom: 40px;
+  }
+  .button-list li {
+    margin-right: 7px;
+    margin-top: 15px;
+  }
 }
 
 .portfolio {
@@ -1411,5 +1462,13 @@ ul {
   border-top: 0;
   box-sizing: border-box;
   padding: 20px 24px;
+}
+
+@media (max-width: 767px) {
+  .portfolio img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
 }
 /*# sourceMappingURL=main.css.map */
