--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -142,3 +142,12 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   }
 }
+@media (max-width: 767px) {
+  .modal-form__policy {
+    font-size: 12px;
+  }
+  .modal-form__input {
+    width: 100%;
+    height: 40px;
+  }
+}
