--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -26,4 +26,13 @@
       border-color: var(--accennt-color);
     }
   }
+  @media (max-width: 767px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    max-width: 500px;
+    overflow-y: scroll;
+  }
 }
