--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -41,7 +41,7 @@
 @media (max-width: 767px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(/images/icon-img/hero1xmob.jpg.jpg);
+      url(/images/icon-img/hero1xmob.jpg);
     background-repeat: no-repeat;
     max-width: 480px;
     max-height: 400px;
