--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -7,6 +7,7 @@
     height: 100vh;
     background-color: #fff;
     overflow: auto;
+    z-index: 999;
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
@@ -64,7 +65,7 @@
 
   .mobile-menu-social-list {
     display: flex;
-    align-items: stretch;
+
     margin-top: 64px;
   }
   .mobile-menu-social-list__link {
@@ -82,6 +83,10 @@
   }
   .bord {
     color: #212121;
+  }
+  .mobile-menu__close-btn:hover,
+  .mobile-menu__close-btn:focus {
+    color: #2196f3;
   }
 }
 @media (min-width: 768px) {
