--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -65,6 +65,10 @@
     border: none;
     background-color: transparent;
   }
+  .menu__button:hover,
+  .menu__button:focus {
+    fill: #2196f3;
+  }
 }
 @media (min-width: 768px) {
   .menu__button {
