--- a/sass/portfolio/_buttons-list.scss
+++ b/sass/portfolio/_buttons-list.scss
@@ -41,3 +41,17 @@
     color: var(--second-primary-text-color);
   }
 }
+@media (max-width: 767px) {
+  .button-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
+    margin-top: -15px;
+    margin-bottom: 40px;
+    li {
+      margin-right: 7px;
+      margin-top: 15px;
+    }
+  }
+}
