--- a/sass/portfolio/_portfolio-settings.scss
+++ b/sass/portfolio/_portfolio-settings.scss
@@ -5,3 +5,14 @@
   padding-top: 94px;
   padding-bottom: 94px;
 }
+@media (min-width: 480px) {
+  .section-conteiner {
+    width: 480px;
+  }
+}
+@media (max-width: 767px) {
+  .section-conteiner {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
