--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -47,6 +47,7 @@
     max-height: 400px;
     padding-top: 118px;
     padding-bottom: 118px;
+    background-size: auto;
   }
   .hero__name {
     font-size: 26px;
