--- a/sass/layout/_logo-footer.scss
+++ b/sass/layout/_logo-footer.scss
@@ -13,5 +13,9 @@
   .footer__contacts {
   }
   .logo-footer {
+    display: block;
+    text-align: center;
+    width: auto;
+    font-size: 24px;
   }
 }
