--- a/sass/portfolio/_portfolio-settings.scss
+++ b/sass/portfolio/_portfolio-settings.scss
@@ -7,12 +7,21 @@
 }
 @media (min-width: 480px) {
   .section-conteiner {
-    width: 480px;
+    max-width: 480px;
   }
 }
 @media (max-width: 767px) {
   .section-conteiner {
     padding-top: 60px;
     padding-bottom: 60px;
+    width: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  .section-conteiner {
+    max-width: 900px;
+    padding: 60px 0;
+    width: 100%;
   }
 }
