--- a/sass/layout/_footer-settings.scss
+++ b/sass/layout/_footer-settings.scss
@@ -27,3 +27,9 @@
     justify-content: space-around;
   }
 }
+@media (min-width: 1200px) {
+  .footer {
+    padding: 60px 0;
+    height: 252px;
+  }
+}
