--- a/sass/layout/_logo-footer.scss
+++ b/sass/layout/_logo-footer.scss
@@ -19,3 +19,11 @@
     font-size: 24px;
   }
 }
+@media (min-width: 1200px) {
+  .logo-footer {
+    display: block;
+    text-align: left;
+
+    font-size: 26px;
+  }
+}
