--- a/sass/components/_social-links-styles.scss
+++ b/sass/components/_social-links-styles.scss
@@ -34,3 +34,13 @@
     width: auto;
   }
 }
+@media (min-width: 1200px) {
+  .card-social-links__item {
+    width: 44px;
+    height: 44px;
+  }
+  .card-social-links {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
