--- a/sass/layout/_about-us.scss
+++ b/sass/layout/_about-us.scss
@@ -88,3 +88,16 @@
     margin-right: 0;
   }
 }
+@media (min-width: 1200px) {
+  .qualitys {
+    padding: 94px 0;
+  }
+  .qualitys__list {
+    flex-wrap: nowrap;
+    margin-right: -30px;
+    li {
+      width: 270px;
+      margin-bottom: 0;
+    }
+  }
+}
