--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -61,7 +61,7 @@
 @media (min-width: 768px) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(/images/icon-img/hero1xtablet.jpg.jpg);
+      url(/images/icon-img/hero1xtablet.jpg);
     background-repeat: no-repeat;
     width: 768px;
     height: 400px;
@@ -74,43 +74,20 @@
     width: auto;
   }
 }
-// @media (min-width: 1200px) {
-//   .hero {
-//     background-color: var(--background-color-primary);
-//     display: flex;
-//     padding-top: 200px;
-//     padding-bottom: 200px;
-//     text-align: center;
-//     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-//       url(../images/icon-img/Img-hero.jpg);
-//     max-width: 1600px;
-//     margin-left: auto;
-//     margin-right: auto;
-//     height: 600px;
-//   }
-//   .hero__name {
-//     width: 696px;
-//     margin: 0 auto 0 auto;
-//     font-weight: 900;
-//     font-size: 44px;
-//     line-height: 1.36;
-//     /* or 136% */
-//     color: var(--second-primary-text-color);
-//     letter-spacing: 0.06em;
-//     text-transform: uppercase;
-//   }
-//   .hero__button {
-//     width: 200px;
-//     height: 50px;
-//     margin-top: 30px;
-//     background-color: var(--accennt-color);
-//     color: var(--second-primary-text-color);
-//     font-weight: bold;
-//     font-size: 16px;
-//     line-height: 1.87;
-//     letter-spacing: 0.06em;
-//     cursor: pointer;
-//     border-radius: 4px;
-//     border: none;
-//   }
-// }
+@media (min-width: 1200px) {
+  .hero {
+    width: 1200px;
+    max-width: 1600px;
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/icon-img/Img-hero.jpg);
+  }
+  .hero__name {
+    font-size: 44px;
+    width: 696px;
+    margin: 0 auto 0 auto;
+    max-width: none;
+  }
+}
