--- a/sass/layout/_regular-customers.scss
+++ b/sass/layout/_regular-customers.scss
@@ -87,3 +87,18 @@
     margin-bottom: 30px;
   }
 }
+@media (min-width: 1200px) {
+  .customers {
+    padding-top: 90px;
+    padding-bottom: 94px;
+  }
+  .customers__title {
+    flex-wrap: nowrap;
+    a {
+      width: 170px;
+      height: 92px;
+    }
+  }
+  .customers__link {
+  }
+}
