--- a/sass/layout/_footer-settings.scss
+++ b/sass/layout/_footer-settings.scss
@@ -24,7 +24,7 @@
   .footer__blocks {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 }
 @media (min-width: 1200px) {
