--- a/sass/layout/_footer-form.scss
+++ b/sass/layout/_footer-form.scss
@@ -88,7 +88,7 @@
     margin-top: 20px;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1170px) {
   .footer-form__name {
     margin-left: auto;
     margin-right: auto;
@@ -109,6 +109,8 @@
   }
   .footer-form {
     margin-top: 60px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 @media (min-width: 1200px) {
