--- a/sass/layout/_header-settings.scss
+++ b/sass/layout/_header-settings.scss
@@ -10,10 +10,15 @@ ul {
 @media (min-width: 768px) {
   .header {
     width: 768px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 @media (min-width: 1200px) {
   .header {
     width: 1200px;
+    display: flex;
+    justify-content: space-between;
   }
 }
