--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -76,8 +76,8 @@
 }
 @media (min-width: 1200px) {
   .hero {
-    width: 1200px;
-    max-width: 1600px;
+    width: 1600px;
+    // max-width: 1600px;
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
