--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -68,6 +68,10 @@
 
     margin-top: 64px;
   }
+  .mobile-menu-social-list__item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    padding-right: 10px;
+  }
   .mobile-menu-social-list__link {
     display: block;
     font-family: Roboto;
@@ -80,10 +84,9 @@
     letter-spacing: 0.02em;
 
     color: #2196f3;
+    padding-left: 10px;
   }
-  .bord {
-    color: #212121;
-  }
+
   .mobile-menu__close-btn:hover,
   .mobile-menu__close-btn:focus {
     color: #2196f3;
