--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,10 @@ body {
 }
 
 @media (min-width: 768px) {
+  .card-social-links {
+    display: flex;
+    justify-content: center;
+  }
   .card-social-links__item {
     width: 44px;
     height: 44px;
@@ -408,6 +412,7 @@ ul {
 @media (min-width: 1200px) {
   .header {
     width: 1200px;
+    height: 80px;
     display: flex;
     justify-content: space-between;
   }
@@ -889,11 +894,11 @@ ul {
 
 @media (min-width: 1200px) {
   .qualitys {
-    padding: 94px 0;
+    padding-top: 94px;
+    padding-bottom: 0;
   }
   .qualitys__list {
     flex-wrap: nowrap;
-    margin-right: -30px;
   }
   .qualitys__list li {
     width: 270px;
@@ -982,7 +987,7 @@ ul {
   color: var(--title-text-color);
 }
 
-@media (max-width: 767px) {
+@media (min-width: 280px) and (max-width: 767px) {
   .team {
     padding: 60px 0;
   }
@@ -1005,12 +1010,11 @@ ul {
   }
   .team__cardlist {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     margin-bottom: -30px;
   }
   .team__cardlist li {
-    width: calc(50% - 15px);
+    flex-basis: calc(50% - 15px);
     margin-bottom: 30px;
     background-color: #fff;
   }
@@ -1596,6 +1600,12 @@ ul {
   }
 }
 
+@media (min-width: 1200px) {
+  .button-list {
+    margin-bottom: 50px;
+  }
+}
+
 .portfolio {
   display: flex;
   flex-direction: row;
@@ -1705,7 +1715,6 @@ ul {
     margin-left: -30px;
   }
   .card-block {
-    width: calc(100% / 3 - 30px);
     margin-left: var(--card-set-gap);
     margin-top: var(--card-set-gap);
   }
