--- a/sass/layout/_header-settings.scss
+++ b/sass/layout/_header-settings.scss
@@ -10,6 +10,7 @@ ul {
 @media (min-width: 768px) {
   .header {
     width: 768px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,6 +19,7 @@ ul {
 @media (min-width: 1200px) {
   .header {
     width: 1200px;
+    height: 80px;
     display: flex;
     justify-content: space-between;
   }
