--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -43,7 +43,7 @@
 //   //   margin-right: 30px;
 //   }
 
-@media (max-width: 767px) {
+@media (min-width: 280px) and (max-width: 767px) {
   .team {
     padding: 60px 0;
   }
@@ -66,12 +66,14 @@
   }
   .team__cardlist {
     display: flex;
-    justify-content: space-between;
+
     flex-wrap: wrap;
     margin-bottom: -30px;
+
     li {
-      width: calc(50% - 15px);
+      flex-basis: calc(50% - 15px);
       margin-bottom: 30px;
+
       background-color: #fff;
       img {
         height: auto;
