--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -69,16 +69,15 @@
 
     flex-wrap: wrap;
     margin-bottom: -30px;
-
-    li {
-      flex-basis: calc(50% - 15px);
-      margin-bottom: 30px;
-
-      background-color: #fff;
-      img {
-        height: auto;
-      }
+    img {
+      height: auto;
     }
+  }
+  .team__card {
+    width: calc(50% - 15px);
+    margin-bottom: 30px;
+
+    background-color: #fff;
   }
 }
 @media (min-width: 1200px) {
@@ -90,11 +89,9 @@
   .team__cardlist {
     flex-wrap: nowrap;
     justify-content: space-between;
-    li {
-      width: 270px;
-    }
   }
-  // .team__card {
-  //   width: 270px;
-  // }
+  .team__card {
+    width: 270px;
+    margin-right: 30px;
+  }
 }
