--- a/sass/layout/_about-us.scss
+++ b/sass/layout/_about-us.scss
@@ -60,9 +60,11 @@
 
   .qualitys {
     padding: 60px 0;
+    margin-bottom: -30px;
   }
   .qualitys__list li {
     width: 100%;
+    margin-bottom: 30px;
   }
   .qualitys__text {
     width: auto;
