--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -17,10 +17,7 @@
       padding-top: 48px;
       padding-bottom: 48px;
       padding-left: 25px;
-
-      display: flex;
-      flex-direction: column;
-      align-items: baseline;
+      height: 100vh;
     }
     &__close-btn {
       position: absolute;
@@ -38,6 +35,12 @@
       visibility: hidden;
       pointer-events: none;
     }
+  }
+  .mobile-menu__nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
   }
   .mobile-menu__nav-list {
     margin-top: -32px;
@@ -62,7 +65,9 @@
     font-size: 34px;
     margin-top: 100px;
   }
-
+  .mobile-menu__contacts-soc {
+    justify-content: space-between;
+  }
   .mobile-menu-social-list {
     display: flex;
 
