--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,13 @@ body {
   fill: #ffffff;
 }
 
+@media (max-width: 768px) {
+  .card-social-links {
+    display: flex;
+    justify-content: center;
+  }
+}
+
 @media (min-width: 768px) {
   .card-social-links {
     display: flex;
@@ -170,7 +177,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(141, 122, 122, 0.5);
   z-index: 100;
   opacity: 1;
   visibility: visible;
@@ -182,6 +189,72 @@ body {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+@media (max-width: 767px) {
+  .backdrop {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(141, 122, 122, 0.5);
+    z-index: 100;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    transition: opacity 250ms linear, visibility 250ms linear;
+    background: rgba(0, 0, 0, 0.2);
+  }
+  .is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+}
+
+@media (min-width: 768px) {
+  .backdrop {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(141, 122, 122, 0.5);
+    z-index: 100;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    transition: opacity 250ms linear, visibility 250ms linear;
+    background: rgba(0, 0, 0, 0.2);
+  }
+  .is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+}
+
+@media (min-width: 1200px) {
+  .backdrop {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(141, 122, 122, 0.5);
+    z-index: 100;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    transition: opacity 250ms linear, visibility 250ms linear;
+    background: rgba(0, 0, 0, 0.2);
+  }
+  .is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 }
 
 .modal {
@@ -216,14 +289,57 @@ body {
 }
 
 @media (max-width: 767px) {
+  .modal .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 450px;
+    height: 609px;
+    max-width: 500px;
+    overflow-y: scroll;
+  }
+}
+
+@media (min-width: 767px) {
   .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100%;
-    height: 100%;
+    width: 450px;
+    height: 609px;
     max-width: 500px;
     overflow-y: scroll;
+  }
+}
+
+@media (min-width: 1200px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 528px;
+    height: 581px;
+    background-color: #ffffff;
+    transform: translate(-50%, -50%);
+    padding: 40px;
+  }
+  .modal__button {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 150%;
+    cursor: pointer;
+    fill: #000000;
+    padding: 0;
+    transition: fill var(--duration) var(--timing-function), border-color var(--duration) var(--timing-function);
+  }
+  .modal__button:hover {
+    fill: var(--accennt-color);
+    border-color: var(--accennt-color);
   }
 }
 
@@ -1024,12 +1140,14 @@ ul {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: -30px;
+    margin-right: -30px;
   }
   .team__cardlist img {
     height: auto;
   }
   .team__card {
-    width: calc(50% - 15px);
+    margin-right: 30px;
+    width: calc((100% - 60px) / 2);
     margin-bottom: 30px;
     background-color: #fff;
   }
