--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -69,12 +69,15 @@
 
     flex-wrap: wrap;
     margin-bottom: -30px;
+    margin-right: -30px;
+
     img {
       height: auto;
     }
   }
   .team__card {
-    width: calc(50% - 15px);
+    margin-right: 30px;
+    width: calc((100% - 60px) / 2);
     margin-bottom: 30px;
 
     background-color: #fff;
